using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants
{
    public const string PLAYER_1_TAG = "Player 1";
    public const string PLAYER_2_TAG = "Player 2";

    public const string JUMP = "Jump";
    public const string RIGHT = "Right";
    public const string LEFTH = "Left";
    public const string ATTACK = "Attack";
    public const string BLOCK = "Block";
}
